--- a/AutoLuby/package.json
+++ b/AutoLuby/package.json
@@ -11,6 +11,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.13",
     "sequelize": "^6.19.0",
+    "sequelize-cli": "^6.4.1",
     "uuid": "^8.3.2"
   }
 }
