--- a/AutoLuby/package.json
+++ b/AutoLuby/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.13",
     "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1",
     "uuid": "^8.3.2"
